--- a/MOFAtools/vignettes/MOFA_example_simulated.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_simulated.Rmd
@@ -12,7 +12,7 @@ vignette: >
 ---
 
 ```{r}
-devtools::load_all("~/Documents/MOFA/MOFApackage/MOFAtools")
+library(MOFAtools)
 ```
 
 # Simulate an example data set
