--- a/MOFAtools/vignettes/MOFA_example_scMT.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_scMT.Rmd
@@ -35,7 +35,7 @@ scMT_data
 
 First, we create the MOFA object:
 ```{r}
-MOFAobject <- createMOFAobject(list(MultiAssayExperiment::assays(scMT_data)[["RNA expression"]]))
+MOFAobject <- createMOFAobject(scMT_data)
 ```
 
 The function `plotTilesData` can be used to obtain an overview of the structure of the data:
@@ -80,7 +80,7 @@ Next, we define training options. The most important are:
 TrainOptions <- getDefaultTrainOptions()
 TrainOptions$seed <- 2017
 TrainOptions$learnFactors <- FALSE
-TrainOptions$maxiter <- 1000
+TrainOptions$maxiter <- 100
 ```
 
 ## Prepare MOFA
@@ -171,7 +171,7 @@ plotTopWeights(
 Also, instead of looking at the "abstract" weights, it is useful to observe, in the original data, the heterogeneity captured by a Factor. This can be done using the `plotDataHeatmap` function.
 ```{r}
 # Add metadata to the plot
-factor1 <- sort(getFactors(MOFAobject,"LF1")[,1])
+factor1 <- sort(getFactors(MOFAobject,"LF_1")[,1])
 order_samples <- names(factor1)
 df <- data.frame(
   row.names = order_samples,
@@ -182,7 +182,7 @@ df <- data.frame(
 plotDataHeatmap(
   object = MOFAobject, 
   view = "RNA expression", 
-  factor = 1, 
+  factor = "LF_1", 
   features = 20, 
   transpose = T, 
   show_colnames=F, show_rownames=T, cluster_cols = F, annotation_col=df # pheatmap options
@@ -249,7 +249,7 @@ plotWeights(
 ```
 
 ```{r, message=FALSE}
-factor2 <- sort(getFactors(MOFAobject,"LF2")[,1])
+factor2 <- sort(getFactors(MOFAobject,"LF_2")[,1])
 order_samples <- names(factor2)
 df <- data.frame(
   row.names = order_samples,
@@ -326,7 +326,7 @@ h <- clusterSamples(MOFAobject, k=2, factors=1)
 plotFactorScatter(
   object = MOFAobject,
   factors = 1:2,
-  color_by = h$cluster,
+  color_by = h,
   shape_by = "culture"
 )
 ```
