cleaning up minor things

--- a/MOFAtools/vignettes/MOFA_example_CLL.Rmd
+++ b/MOFAtools/vignettes/MOFA_example_CLL.Rmd
@@ -96,7 +96,9 @@ Next, we define training options. The most important are:
 TrainOptions <- getDefaultTrainOptions()
 
 # Automatically drop factors that explain less than 2% of variance in all omics
-TrainOptions$DropFactorThreshold <- 0.02
+TrainOptions$DropFactorThreshold <- 0.01
+
+TrainOptions
 ```
 
 ## Prepare MOFA
